--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ MarkupSafe==2.0.1
 matplotlib==3.4.3
 noisereduce==2.0.0
 numba==0.54.1
-numpy==1.21.4
+numpy>=1.17
 packaging==21.2
 Pillow==8.4.0
 pooch==1.5.2
